--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Organization App</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="public/css/main.css">
 </head>
   <body>
 
     <div id="root"></div>
 
-    <script src="/js/bundle.js"></script>
+    <script src="public/js/bundle.js"></script>
   </body>
 </html>
